fix(OMN-433): Address additional PR review feedback
- Move CI permissions to job-level scope (security best practice)
- Document mypy --incremental limitation in CI environments
- Narrow pytest-smoke scope to tools/ only for faster commits
- Expand per-file-ignores documentation in pyproject.toml
- Verified regex patterns work correctly (no changes needed)

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,11 +12,6 @@ env:
   UV_VERSION: "0.5.14"
   CACHE_VERSION: "0.1.0"
 
-# Permissions required for dorny/paths-filter to access PR file list via GitHub API
-permissions:
-  contents: read
-  pull-requests: read
-
 # Path filter for production code jobs (lint, type-check, test-unit)
 # Scope: tools/, utils/, runtime/ source code and their tests
 # This matches pre-commit hook scope (see .pre-commit-config.yaml)
@@ -27,6 +22,11 @@ jobs:
   changes:
     name: Detect Changes
     runs-on: ubuntu-latest
+    # Permissions required for dorny/paths-filter to access PR file list via GitHub API
+    # Scoped to this job only (security best practice - least privilege)
+    permissions:
+      contents: read
+      pull-requests: read
     outputs:
       production_code: ${{ steps.filter.outputs.production_code }}
     steps:
