fix(OMN-433): Address PR #6 review - add mypy cache and pytest unit marker
- Add mypy cache step to CI type-check job for faster incremental runs
- Update pytest-smoke hook to use -m unit marker (excludes integration tests)
- Update mypy documentation to reflect CI caching implementation

Addresses CodeRabbit review feedback on PR #6.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -196,6 +196,20 @@ jobs:
       - name: Install dependencies
         run: uv sync --group dev --group core
 
+      # Cache mypy's incremental analysis data for faster subsequent runs
+      # Without this cache, --incremental flag provides no benefit in CI (fresh containers)
+      # Key includes Python version and source file hashes for cache invalidation
+      - name: Cache mypy
+        uses: actions/cache@v4
+        with:
+          path: .mypy_cache
+          key: >-
+            mypy-${{ runner.os }}-${{ env.PYTHON_VERSION }}-
+            ${{ hashFiles('src/omniintelligence/tools/**/*.py', 'src/omniintelligence/utils/**/*.py', 'src/omniintelligence/runtime/**/*.py') }}-
+            ${{ env.CACHE_VERSION }}
+          restore-keys: |
+            mypy-${{ runner.os }}-${{ env.PYTHON_VERSION }}-
+
       # Scope: tools/, utils/, runtime/ source code (not tests)
       # Matches pre-commit mypy hook scope (see .pre-commit-config.yaml)
       - name: Run mypy
