--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -102,9 +102,10 @@ repos:
     hooks:
       - id: mypy
         name: mypy (type check)
-        # --incremental uses mypy cache for faster subsequent runs (locally)
-        # Note: In CI with fresh containers, --incremental provides no benefit but causes no harm.
-        # For CI optimization, consider caching .mypy_cache/ directory.
+        # --incremental uses mypy cache for faster subsequent runs
+        # Locally: Cache in .mypy_cache/ speeds up repeated runs automatically
+        # CI: .mypy_cache/ is cached in .github/workflows/ci.yaml (type-check job)
+        #     to restore incremental benefits across workflow runs
         args: [--strict, --ignore-missing-imports, --incremental]
         # types: [python] is more efficient than files regex for Python detection
         types: [python]
@@ -150,7 +151,7 @@ repos:
       # --------------------------------------------------------------------------
       - id: pytest-smoke
         name: pytest (smoke tests)
-        entry: uv run pytest tests/unit/tools/ --maxfail=3 -x --tb=short -q
+        entry: uv run pytest tests/unit/tools/ -m unit --maxfail=3 -x --tb=short -q
         language: system
         pass_filenames: false
         types: [python]
