--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,10 +12,24 @@ env:
   UV_VERSION: "0.5.14"
   CACHE_VERSION: "0.1.0"
 
+# ============================================================================
+# CI-PRECOMMIT ALIGNMENT NOTICE - KEEP IN SYNC WITH .pre-commit-config.yaml
+# ============================================================================
 # Path filter for production code jobs (lint, type-check, test-unit)
 # Scope: tools/, utils/, runtime/ source code and their tests
-# This matches pre-commit hook scope (see .pre-commit-config.yaml)
+#
+# ALIGNED PATTERNS (must stay synchronized):
+# - CI production_code filter (lines 42-50): glob patterns for path detection
+# - Pre-commit ruff/mypy files: regex patterns for hook filtering
+#
+# Source directories: tools/, utils/, runtime/
+# Test directories: tests/unit/tools/, tests/unit/test_log_sanitizer.py
+#
+# Validation: scripts/validate_ci_precommit_alignment.py checks alignment
+# Run manually: uv run python scripts/validate_ci_precommit_alignment.py
+#
 # Note: pre-commit and contract-validation run on all changes (no path filter)
+# ============================================================================
 
 jobs:
   # Detect which files changed to conditionally run production code jobs
@@ -97,6 +111,48 @@ jobs:
       - name: Run pre-commit hooks
         run: |
           uv run pre-commit run --all-files --show-diff-on-failure
+
+  # Validate CI and pre-commit scope alignment
+  # Ensures path filters in CI match file patterns in pre-commit hooks
+  # Fast check (~1s) that catches configuration drift before it causes issues
+  scope-alignment:
+    name: Scope Alignment
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: ${{ env.UV_VERSION }}
+
+      - name: Cache uv dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/uv
+          key: >-
+            uv-${{ runner.os }}-${{ env.PYTHON_VERSION }}-
+            ${{ hashFiles('**/uv.lock') }}-
+            ${{ env.CACHE_VERSION }}
+          restore-keys: |
+            uv-${{ runner.os }}-${{ env.PYTHON_VERSION }}-${{ hashFiles('**/uv.lock') }}-
+            uv-${{ runner.os }}-${{ env.PYTHON_VERSION }}-
+
+      - name: Install dependencies
+        run: uv sync --group dev
+
+      - name: Validate CI-precommit scope alignment
+        run: |
+          echo "Validating alignment between CI path filters and pre-commit patterns..."
+          uv run python scripts/validate_ci_precommit_alignment.py --verbose
 
   # Lint job - ruff check and format validation
   # Scope aligned with pre-commit hooks (tools/, utils/, runtime/ and their tests)
@@ -372,13 +428,14 @@ jobs:
   ci-summary:
     name: CI Summary
     runs-on: ubuntu-latest
-    needs: [changes, pre-commit, lint, type-check, test-unit, contract-validation]
+    needs: [changes, pre-commit, scope-alignment, lint, type-check, test-unit, contract-validation]
     if: always()
 
     steps:
       - name: Check results
         run: |
           precommit="${{ needs.pre-commit.result }}"
+          scopealign="${{ needs.scope-alignment.result }}"
           lint="${{ needs.lint.result }}"
           typecheck="${{ needs.type-check.result }}"
           unittest="${{ needs.test-unit.result }}"
@@ -424,6 +481,7 @@ jobs:
           echo "| Job | Status | Result |" >> $GITHUB_STEP_SUMMARY
           echo "|-----|:------:|--------|" >> $GITHUB_STEP_SUMMARY
           echo "| Pre-commit Hooks | $(get_status_icon $precommit) | \`$precommit\` |" >> $GITHUB_STEP_SUMMARY
+          echo "| Scope Alignment | $(get_status_icon $scopealign) | \`$scopealign\` |" >> $GITHUB_STEP_SUMMARY
           echo "| Lint | $(get_status_icon $lint) | \`$lint\` |" >> $GITHUB_STEP_SUMMARY
           echo "| Type Check | $(get_status_icon $typecheck) | \`$typecheck\` |" >> $GITHUB_STEP_SUMMARY
           echo "| Unit Tests | $(get_status_icon $unittest) | \`$unittest\` |" >> $GITHUB_STEP_SUMMARY
@@ -432,6 +490,7 @@ jobs:
 
           # Overall status - production code jobs can be skipped if no relevant changes
           if is_acceptable "$precommit" "false" && \
+             is_acceptable "$scopealign" "false" && \
              is_acceptable "$lint" "true" && \
              is_acceptable "$typecheck" "true" && \
              is_acceptable "$unittest" "true" && \
