--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,18 +15,60 @@ env:
 # ============================================================================
 # CI-PRECOMMIT ALIGNMENT NOTICE - KEEP IN SYNC WITH .pre-commit-config.yaml
 # ============================================================================
-# Path filter for production code jobs (lint, type-check, test-unit)
-# Scope: tools/, utils/, runtime/ source code and their tests
+#
+# OVERVIEW:
+# This workflow uses path-based filtering to run production code jobs only when
+# relevant files change. These paths must stay synchronized with pre-commit hooks.
+#
+# CURRENT SCOPE:
+# - Source directories: tools/, utils/, runtime/
+# - Test directories: tests/unit/tools/, tests/unit/test_log_sanitizer.py
 #
 # ALIGNED PATTERNS (must stay synchronized):
-# - CI production_code filter (lines 42-50): glob patterns for path detection
-# - Pre-commit ruff/mypy files: regex patterns for hook filtering
+# 1. CI production_code filter (changes job): glob patterns for path detection
+# 2. Pre-commit ruff/mypy files: regex patterns for hook filtering
+# 3. CI lint/type-check job paths: explicit paths for commands
+# 4. Mypy cache hashFiles: glob patterns for cache invalidation
 #
-# Source directories: tools/, utils/, runtime/
-# Test directories: tests/unit/tools/, tests/unit/test_log_sanitizer.py
+# INTENTIONAL SCOPE DIFFERENCES:
+# - Path filter (broad): Triggers jobs on any production code change
+# - Pytest scope (narrow): Only runs tests/unit/tools/ (mature tests only)
+# - See test-unit job comments for detailed rationale and expansion TODO
 #
-# Validation: scripts/validate_ci_precommit_alignment.py checks alignment
-# Run manually: uv run python scripts/validate_ci_precommit_alignment.py
+# VALIDATION:
+# - Automated: scope-alignment job runs on every CI build
+# - Manual: uv run python scripts/validate_ci_precommit_alignment.py --verbose
+# - Script detects drift between CI globs and pre-commit regex patterns
+#
+# ADDING A NEW MODULE:
+# When adding a new source directory (e.g., models/), update ALL of these:
+#
+# 1. CI production_code filter (this file, changes job filters):
+#    Add: - 'src/omniintelligence/newmodule/**'
+#
+# 2. CI lint job paths (ruff check and ruff format commands):
+#    Add: src/omniintelligence/newmodule/ \
+#
+# 3. CI type-check job - mypy cache hashFiles (~line 272):
+#    Add: 'src/omniintelligence/newmodule/**/*.py' to the hashFiles() call
+#    IMPORTANT: hashFiles patterns must match the mypy command scope
+#
+# 4. CI type-check job - mypy command:
+#    Add: src/omniintelligence/newmodule/
+#
+# 5. Pre-commit ruff/mypy files pattern (.pre-commit-config.yaml):
+#    Update regex: (tools|utils|runtime|newmodule)
+#
+# 6. Validation script canonical list (scripts/validate_ci_precommit_alignment.py):
+#    Add 'newmodule' to ALIGNED_SOURCE_DIRS
+#
+# MYPY CACHE STRATEGY:
+# The mypy cache key includes hashes of all Python files in the checked scope.
+# This ensures cache invalidation when source files change, while allowing
+# cache reuse when only unrelated files change. The hashFiles patterns MUST
+# match the directories passed to the mypy command:
+#   - hashFiles: 'src/omniintelligence/{tools,utils,runtime}/**/*.py'
+#   - mypy command: src/omniintelligence/{tools,utils,runtime}/
 #
 # Note: pre-commit and contract-validation run on all changes (no path filter)
 # ============================================================================
@@ -42,6 +84,9 @@ jobs:
       contents: read
       pull-requests: read
     outputs:
+      # NOTE: Output name uses underscores (production_code) intentionally.
+      # GitHub Actions outputs work reliably with underscores; hyphens can cause
+      # issues in expression contexts. This naming is correct per GitHub docs.
       production_code: ${{ steps.filter.outputs.production_code }}
     steps:
       - name: Checkout code
@@ -277,6 +322,24 @@ jobs:
 
   # Unit tests with coverage
   # Only runs when production code changes
+  #
+  # TEST SCOPE NOTICE:
+  # The pytest scope (tests/unit/tools/) is intentionally narrower than the path
+  # filter scope (tools/, utils/, runtime/). This is because:
+  #
+  # 1. Only tests/unit/tools/ has mature, comprehensive unit tests currently
+  # 2. utils/ has only test_log_sanitizer.py (not a full test suite)
+  # 3. runtime/ does not have unit tests yet (integration tests pending)
+  #
+  # The broader path filter ensures the test job RUNS when any production code
+  # changes (catching regressions), while the narrow pytest scope prevents CI
+  # failures from missing test files.
+  #
+  # TODO(OMN-XXX): Expand test scope as unit tests are added:
+  # - Add tests/unit/utils/ when utils test suite is complete
+  # - Add tests/unit/runtime/ when runtime unit tests exist
+  # - Update coverage target to include all tested modules
+  #
   test-unit:
     name: Unit Tests
     runs-on: ubuntu-latest
@@ -313,6 +376,8 @@ jobs:
       - name: Install dependencies
         run: uv sync --group dev --group core
 
+      # Scope: tests/unit/tools/ only (see TEST SCOPE NOTICE above)
+      # Coverage: tools/ only - expand when more test suites are added
       - name: Run unit tests with coverage
         run: |
           uv run pytest tests/unit/tools/ \
