--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,7 +68,7 @@ dev = [
     "requests>=2.31.0",
     "factory-boy>=3.3.0",
     "types-pyyaml>=6.0.12",
-    "pre-commit>=4.0.0",
+    "pre-commit>=4.5.0",  # Synced with Poetry group.dev.dependencies
 ]
 
 # Core node system dependencies
@@ -152,7 +152,7 @@ all = [
     "requests>=2.31.0",
     "factory-boy>=3.3.0",
     "types-pyyaml>=6.0.12",
-    "pre-commit>=4.0.0",
+    "pre-commit>=4.5.0",  # Synced with Poetry group.dev.dependencies
 ]
 
 # Ruff configuration - aligned with omnibase_core
