feat(OMN-433): Add mypy cache validation, version docs, and CI profiling
- Add mypy cache pattern validation to validate_ci_precommit_alignment.py
  - New MypyCacheValidation dataclass for results
  - Extracts hashFiles patterns and mypy command paths
  - Detects drift between cache key and mypy scope
  - Integrated into main validation flow with verbose output

- Document pre-commit version requirement (>=4.5.0)
  - Modern stage names (pre-commit/pre-push vs commit/push)
  - Ecosystem compatibility with 4.0+ hooks
  - CLI fail-fast option (4.4.0+)
  - Upgrade instructions for pip/uv/pipx

- Add pre-commit profiling to CI workflow
  - Enable --verbose flag for hook timing
  - Add time command for total execution tracking
  - Reference profiling docs in .pre-commit-config.yaml

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -153,9 +153,13 @@ jobs:
           restore-keys: |
             pre-commit-${{ runner.os }}-${{ env.PYTHON_VERSION }}-
 
+      # Verbose mode enables hook profiling - shows execution time for each hook
+      # This helps identify slow hooks and track performance regressions
+      # See .pre-commit-config.yaml for profiling documentation and thresholds
       - name: Run pre-commit hooks
         run: |
-          uv run pre-commit run --all-files --show-diff-on-failure
+          echo "Starting pre-commit hooks with profiling..."
+          time uv run pre-commit run --all-files --show-diff-on-failure --verbose
 
   # Validate CI and pre-commit scope alignment
   # Ensures path filters in CI match file patterns in pre-commit hooks
