refactor(OMN-433): Add defensive validation and robustness improvements
- Add defensive validation to extract_precommit_patterns()
  - Handle malformed patterns, missing keys, non-dict/list inputs
  - Log warnings for unparseable patterns (don't fail silently)
  - Support both single and double quotes in patterns
  - Validate regex patterns compile before using

- Fix mypy cache pattern quote handling
  - Support both single and double quotes in hashFiles patterns
  - Handle YAML multiline strings with mixed quotes
  - Document quote handling with examples

- Handle cancelled job status in CI summary
  - is_acceptable() now explicitly returns failure for cancelled
  - Added comprehensive status handling documentation
  - Cancelled jobs prevent CI from passing

- Create tests/unit/utils/ directory structure
  - Add __init__.py with migration plan documentation
  - Document files requiring pattern updates for future migration
  - Prepare for test_log_sanitizer.py relocation

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -522,18 +522,38 @@ jobs:
             esac
           }
 
-          # Check if a job result is acceptable (success or skipped due to path filter)
+          # Check if a job result is acceptable for CI to pass
+          #
+          # Status handling logic:
+          #   - success:   Always acceptable - job completed without errors
+          #   - skipped:   Acceptable ONLY for production code jobs when no relevant files changed
+          #                (lint, type-check, test-unit use path filtering via changes job)
+          #   - cancelled: Never acceptable - indicates workflow was manually stopped or timed out
+          #   - failure:   Never acceptable - job encountered errors
+          #
+          # Args:
+          #   $1 - Job result status (success|failure|cancelled|skipped)
+          #   $2 - Whether this is a production code job with path filtering (true|false)
           is_acceptable() {
             local result="$1"
             local is_production_code_job="$2"
+
+            # Explicitly reject cancelled status - workflow was interrupted
+            if [[ "$result" == "cancelled" ]]; then
+              return 1
+            fi
+
             # Always accept success
             if [[ "$result" == "success" ]]; then
               return 0
             fi
+
             # For production code jobs, skipped is acceptable when no relevant files changed
             if [[ "$is_production_code_job" == "true" ]] && [[ "$result" == "skipped" ]] && [[ "$production_code_changed" != "true" ]]; then
               return 0
             fi
+
+            # All other statuses (failure, unexpected) are not acceptable
             return 1
           }
 
